[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"]}
